# Intelligent-Observability-Watchdog

./: README.md  prompts.md  pyproject.toml  seed_data.py  simulate_breach.py
app/: config.py  database.py  main.py  models.py  schemas.py  watchdog.py  websocket.py
app/routers/: alerts.py  events.py  state.py  watchdog.py
dashboard/: api_client.py  app.py
dashboard/pages/: alerts_page.py  event_explorer.py  health_trends.py  live_feed.py  overview.py  rules_page.py
tests/: conftest.py  test_alerts.py  test_events.py  test_state.py
