[project]
name = "intelligent_observability"
version = "0.1.0"
description = "Intelligent Observability & Event Watchdog - API-first monitoring platform"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "greenlet==3.1.1",
    "aiosqlite==0.20.0",
    "pydantic==2.9.2",
    "pydantic-settings>=2.3",
    "jinja2==3.1.4",
    "python-multipart==0.0.12",
    "httpx==0.27.2",
    "apscheduler==3.10.4",
    "websockets>=12.0",
    "streamlit>=1.35.0",
    "streamlit-autorefresh>=1.0.1",
    "plotly>=5.20",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
